2005-02-14  Duncan Mak  <duncan@ximian.com>

	* Collection.cs:
	* ComClassAttibute.cs:
	* SpcInfo.cs:
	* TabInfo.cs:
	* VBFixedStringAttribute.cs:
	* VBMath.cs: Remove extraneous semicolon at the end of the class
	declaration. Spotted by Dennis Hayes <denisraytek@yahoo.com>.

2004-10-11 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* FileSystem.cs: Adjusting exposed API according to class status page ('ref' instead of 'out'). 
	Commented out an additional API.

2004-09-06  Jambunathan K  <kjambunathan@novell.com>

	* Strings.cs: Fixed formatting issues. For the sake of consistency
	in style, stripped out all the comment strings that were documenting
	the APIs.

2004-09-05  Jambunathan K  <kjambunathan@novell.com>
	* DateAndTime.cs (DateTime.Today): Changed signature of stime().
	* Strings.cs: 
	* Collection.cs: 
	* VBMath.cs: 
	* Interaction.cs: 
	* Information.cs: 
	* Globals.cs: 
	* Financial.cs: 
	* FileSystem.cs: 
	* ErrObject.cs: 
	* Conversion.cs: 
	* Constants.cs: 

	Replaced System.ComponentModel.EditorBrowsableAttribute and
	Microsoft.VisualBasic.CompilerServices.StandardModuleAttribute
	with their short and sweet equivalents.

	Replaced System.ComponentModel.DefaultValueAttribute with the
	newly introduced Microsoft.VisualBasic.CompilerServices
	.__DefaultArgumentValueAttribute.

2004-08-16  Jambunathan K  <kjambunathan@novell.com>
	* Interaction.cs: 
	* Information.cs: 
	* ErrObject.cs: 
	* FileSystem.cs: Aesthetic changes.

2004-08-11 Anirban Bhattachartjee <banirban@novell.com>
	* Strings.cs: - Bug fix (#62235) - by Rob Tillie<Rob.Tillie@student.tul.EDU>
		      - Excetion handling in Join
		      - Support for Hex in format function (not sure whether this fix is a complete one)		

2004-08-11 Anirban Bhattachartjee <banirban@novell.com>
	* Interaction.cs: Bug fix (#62234) - by Rob Tillie<Rob.Tillie@student.tul.EDU>

2004-07-31  Jambunathan K  <kjambunathan@novell.com>
	* Strings.cs: Fixed a bug in Format()